--- a/source/module_beyonddft/density/test/CMakeLists.txt
+++ b/source/module_beyonddft/density/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 AddTest(
   TARGET dm_trans_test
-  LIBS base ${math_libs} device psi orb
-  SOURCES dm_trans_test.cpp
+  LIBS base ${math_libs} device container psi 
+  SOURCES dm_trans_test.cpp ../../../module_basis/module_ao/parallel_2d.cpp
 )
