--- a/source/module_beyonddft/utils/test/CMakeLists.txt
+++ b/source/module_beyonddft/utils/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 AddTest(
   TARGET lr_util_phys_test
-  LIBS base ${math_libs} device orb
-  SOURCES lr_util_physics_test.cpp
+  LIBS base ${math_libs} device 
+  SOURCES lr_util_physics_test.cpp ../../../module_basis/module_ao/parallel_2d.cpp
 )
