--- a/source/module_ri/test/CMakeLists.txt
+++ b/source/module_ri/test/CMakeLists.txt
@@ -6,3 +6,8 @@ AddTest(
   LIBS base ${math_libs} device
   SOURCES dm_mixing_test.cpp ../Mix_DMk_2D.cpp
 )
+AddTest(
+  TARGET exx_symmetry_test
+  LIBS base ${math_libs}  device orb psi
+  SOURCES exx_symmetry_test.cpp ../exx_symmetry.cpp
+)
