multi-k AX routine based on HContainer & DensityMatrix
fix a nullptr in Psi(T*)

fix: paraX, paraMat, HContainer&DM, Davidson-precondition

a common pointer constructor of Psi

--- a/source/module_beyonddft/CMakeLists.txt
+++ b/source/module_beyonddft/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(AX)
-add_subdirectory(density)
+add_subdirectory(dm_trans)
 add_subdirectory(utils)
 if(ENABLE_LCAO)
   list(APPEND objects
