multi-k AX routine based on HContainer & DensityMatrix
fix a nullptr in Psi(T*)

fix: paraX, paraMat, HContainer&DM, Davidson-precondition

a common pointer constructor of Psi

psi wrapperL: k1<->bfirst

small fixes

fix act interface: nbands<=psi_in.get_nbands()

get_act_type() for each operator

refactor: exx dm

fix out_dm

--- a/source/module_beyonddft/utils/test/CMakeLists.txt
+++ b/source/module_beyonddft/utils/test/CMakeLists.txt
@@ -3,3 +3,9 @@ AddTest(
   LIBS base ${math_libs} device 
   SOURCES lr_util_physics_test.cpp ../../../module_basis/module_ao/parallel_2d.cpp
 )
+
+AddTest(
+  TARGET lr_util_algo_test
+  LIBS base ${math_libs} device psi container
+  SOURCES lr_util_algorithms_test.cpp ../../../module_basis/module_ao/parallel_2d.cpp
+)
