symmetry rotation for EXX
enable time-reversal symmetry

fix: unify row-continous

fix bug and add tests

find irreducible atompair

real space Hamiltonian rotation

new algorithm to find irreducible sector

fix wrong O-lattice in M matrix's phase factor

H(R) rotation: parallel ver.

irreducible sector stars; type name refactor

useful test for Hexx

new algorithm to find irreducible sector

small fix of generative algorithm

--- a/source/module_ri/CMakeLists.txt
+++ b/source/module_ri/CMakeLists.txt
@@ -7,6 +7,8 @@ if (ENABLE_LIBRI)
         exx_lip.cpp
         Mix_DMk_2D.cpp
         Mix_Matrix.cpp
+        symmetry_rotation.cpp
+        symmetry_irreducible_sector.cpp
   )
 
   if(ENABLE_LCAO)
