--- a/source/Makefile.Objects
+++ b/source/Makefile.Objects
@@ -524,6 +524,7 @@ OBJS_MODULE_RI=conv_coulomb_pot_k.o\
       RI_2D_Comm.o\
       Mix_DMk_2D.o\
       Mix_Matrix.o\
+      symmetry_rotation.o\
 
 OBJS_PARALLEL=parallel_common.o\
     parallel_global.o\
