difference density matrix T

--- a/source/module_lr/CMakeLists.txt
+++ b/source/module_lr/CMakeLists.txt
@@ -3,6 +3,7 @@ if(ENABLE_LCAO)
   add_subdirectory(AX)
   add_subdirectory(dm_trans)
   add_subdirectory(ri_benchmark)
+  add_subdirectory(Grad)
 
   list(APPEND objects
     utils/lr_util.cpp
