CVCX-type AX in R of Z-vector eq

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -703,6 +703,7 @@ if(ENABLE_LCAO)
       deltaspin
       numerical_atomic_orbitals
       lr
+      lr_grad
   )
   if (USE_ELPA)
     target_link_libraries(${ABACUS_BIN_NAME}
