RHS of Z-vec eq & common ophxc framework

--- a/source/module_beyonddft/Grad/CMakeLists.txt
+++ b/source/module_beyonddft/Grad/CMakeLists.txt
@@ -6,4 +6,6 @@ add_subdirectory(CVCX)
     CVCX/CVCX_parallel.cpp
     CVCX/CVCX_serial.cpp
     xc/kernel_grad_xc.cpp
+    xc/pot_grad_xc.cpp
+    operator_lr_hxc_common/operator_lr_hxc_common.cpp
   )
