--- a/source/module_lr/Grad/CMakeLists.txt
+++ b/source/module_lr/Grad/CMakeLists.txt
@@ -1,2 +1,10 @@
 add_subdirectory(dm_diff)
 add_subdirectory(CVCX)
+
+add_library(
+lr_grad
+OBJECT
+CVCX/CVCX_parallel.cpp
+CVCX/CVCX_serial.cpp
+xc/kernel_grad_xc.cpp
+)
