--- a/source/module_lr/ri_benchmark/test/CMakeLists.txt
+++ b/source/module_lr/ri_benchmark/test/CMakeLists.txt
@@ -1,5 +1,7 @@
-AddTest(
-  TARGET ri_benchmark_test
-  LIBS psi base ${math_libs} device container
-  SOURCES ri_benchmark_test.cpp
-)
+if (ENABLE_LIBRI)
+  AddTest(
+    TARGET ri_benchmark_test
+    LIBS psi base ${math_libs} device container
+    SOURCES ri_benchmark_test.cpp
+  )
+endif()
